Nexell Swallow RISC-V Machine
This provides a RISC-V Board compatible with the the Nexell Swallow.
The following machine is implemented:

- 'nexell_swallow'; CLINT, PLIC, UART, device-tree

Change-Id: Iaeed24f9d31dbc0d5dafb24d67c3437c69b36be4
Signed-off-by: Hyunseok Jung <hsjung@nexell.co.kr>

--- a/hw/riscv/Makefile.objs
+++ b/hw/riscv/Makefile.objs
@@ -9,3 +9,9 @@ obj-y += sifive_u.o
 obj-y += sifive_uart.o
 obj-y += spike.o
 obj-y += virt.o
+obj-y += nexell_clint.o
+obj-y += nexell_prci.o
+obj-y += nexell_plic.o
+obj-y += nexell_test.o
+obj-y += nexell_uart.o
+obj-y += nexell_swallow.o
