hw: pwm: Introduce nexell pwm model
This patch introduces Nexell pwm model.

Change-Id: I62e971c40dc00395466b3035de2a042c16041349
Signed-off-by: seoji <seoji@nexell.co.kr>

--- a/hw/core/Makefile.objs
+++ b/hw/core/Makefile.objs
@@ -23,3 +23,5 @@ common-obj-$(CONFIG_PLATFORM_BUS) += platform-bus.o
 
 obj-$(CONFIG_SOFTMMU) += generic-loader.o
 obj-$(CONFIG_SOFTMMU) += null-machine.o
+
+obj-$(CONFIG_SWALLOW) += ptimer.o
