hw: riscv: Introduce nexell vip model
This patch introduces Nexell VIP model.

Change-Id: I6ace055f3a7b42943dae1bc092d363424ac894c8
Signed-off-by: HyejungKwon <cjscld15@nexell.co.kr>

--- a/hw/riscv/Makefile.objs
+++ b/hw/riscv/Makefile.objs
@@ -14,4 +14,5 @@ obj-y += nexell_prci.o
 obj-y += nexell_plic.o
 obj-y += nexell_test.o
 obj-y += nexell_uart.o
+obj-y += nexell_vip.o
 obj-y += nexell_swallow.o
