--- a/hw/usb/Makefile.objs
+++ b/hw/usb/Makefile.objs
@@ -13,6 +13,7 @@ common-obj-$(CONFIG_USB_MUSB) += hcd-musb.o
 
 obj-$(CONFIG_TUSB6010) += tusb6010.o
 obj-$(CONFIG_IMX)      += chipidea.o
+obj-$(CONFIG_SWALLOW) += nexell_usb.o
 
 # emulated usb devices
 common-obj-$(CONFIG_USB) += dev-hub.o
